--- a/public/bootstrap-demo/home.html
+++ b/public/bootstrap-demo/home.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Todo components!!!</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
   </head>
   <body>
     <div class="container mt-5">
-        <h1>Hello, world!Hello, world!
-            Hello, world!Hello, world!
-            Hello, world!Hello, world!
-            Hello, world!Hello, world!
+        <h1>Hi, man!Yaps, nowhere!
+            Waks, the fire!Ops, behave yourself!
+            Ah, bravo!Hmm, Alas!
+            Nops, idiots!Ya, champion!
         </h1>
         <button type="button" class="btn btn-primary">Primary</button>
         <button type="button" class="btn btn-secondary">Secondary</button>
@@ -58,6 +58,36 @@
             <span class="spinner-border spinner-border-sm"></span>
             Loading...
         </button>
+
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated"
+            style="width: 85%;">85%</div>
+        </div>
+
+        <button class="btn btn-primary" type="button"
+            data-bs-toggle="collapse" data-bs-target="#collapseExample">
+        Show/Hide contents
+        </button>
+        <div class="collapse" id="collapseExample">
+            <div class="card-body">
+                Hide Contents until button is pressed.
+            </div>
+        </div>
+        <div class="accordion">
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                    <button class="accordion-button" type="button"
+                        data-bs-toggle="collapse" data-bs-target="#collapseOne">
+                        Learn more here
+                    </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show">
+                    <div class="accordion-body">
+                        Here is what you can learn!
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     
