--- a/public/bootstrap-demo/home.html
+++ b/public/bootstrap-demo/home.html
@@ -88,6 +88,14 @@
                 </div>
             </div>
         </div>
+
+        <div class="d-none d-md-block">
+            This text is hide on small screen and visible on medium or up.
+        </div>
+
+        <div class="d-md-none d-block">
+            This text is hide on midum or large screens and visible on small.
+        </div>
     </div>
 
     
